--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
